project_2 dodavanje jave i minerala

--- a/materials.html
+++ b/materials.html
@@ -73,7 +73,7 @@
     </div>
     <div class="raspored-materijala"><a href=""><img src="slike/materials/steatit.png" alt="">STEATIT</a>
     </div>
-    <div class="raspored-materijala"><a href="../projekat2/materials/minerali.html"><img src="slike/materials/minerali.png" alt="">MINERALI</a>
+    <div class="raspored-materijala"><a href="materials/minerali.html"><img src="slike/materials/minerali.png" alt="">MINERALI</a>
     </div>
     <div class="raspored-materijala"><a href=""><img src="slike/materials/mikrokristalizati.png" alt="">MIKROKRISTALIZATI</a>
     </div>
